--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css"></link>
     <title>Weather app</title>
 </head>
-<body>
+<body class="body">
     <header class="bg-primary text-center py-3">
         <h1 class="fw-bold h3 text-light my-1">Weather Dashboard</h1>
     </header>
@@ -16,8 +16,8 @@
         <div class="row">
             <div class="col-xxl-3 col-md-4 px-lg-4">
                 <h4 class="fw-bold">Enter a City Name</h4>
-                <input type="text" id="city-input" class="py-2 form-control" placeholder="E.g., Sarajevo">
-                <button class="btn btn-primary w-100 my-2 p-2">Search</button>
+                <input type="text" id="city-input" class="py-2 form-control" placeholder="E.g. Sarajevo">
+                <button class="btn btn-primary w-100 my-2 p-2" onclick="getCoordinates()" type="submit">Search</button>
                 <div class="container-fluid ">
                     <div class="row">
                       <div class="col-5 px-0">
@@ -31,70 +31,20 @@
                       </div>
                     </div>
                 </div>
-                <button class="btn btn-secondary w-100 my-2 p-2">Use Current Location</button>
+                <button class="btn btn-secondary w-100 my-2 p-2" onclick="getUserLocation()">Use Current Location</button>
             </div>
             <div class="col-xxl-9 col-md-8 mt-md-1 mt-4 pe-lg-4">
               <div class="current-weather bg-primary text-white py-2 px-4 rounded-3"> 
-                <h3 class="fw-bold">City (Date)</h3>
-                <h6>Temperature:</h6>
-                <h6>Wind:</h6>
-                <h6>Humidity:</h6>
+                  <h3 class="fw-bold current-city">Now</h3>
+                  <h5 class="font-s" >Temperature: <p id="current-temp"></p></h5>
+                  <h5 id="current-wind">Wind:</h5>
               </div>
               <h4 class="fw-bold my-4">5-Day Forecast</h4>
               <div class="weather-forecast row row-cols-sm-2 row-cols-lg-4 row-cols-xl-5 justify-content-between">
-                <div class="col mb-3">
-                 <div class="card border-0 bg-secondary text-white">
-                   <div class="card-body p-3 text-white">
-                      <h5 class="card-title fw-semibold">(Date)</h5>
-                      <h6 class="card-text my-3 mt-3">Temperature:</h6>
-                      <h6 class="card-text my-3 mt-3">Wind:</h6>
-                      <h6 class="card-text my-3 mt-3">Humidity:</h6>
-                   </div>
-                 </div>
-                </div>
-                <div class="col mb-3">
-                  <div class="card border-0 bg-secondary text-white">
-                    <div class="card-body p-3 text-white">
-                       <h5 class="card-title fw-semibold">(Date)</h5>
-                       <h6 class="card-text my-3 mt-3">Temperature:</h6>
-                       <h6 class="card-text my-3 mt-3">Wind:</h6>
-                       <h6 class="card-text my-3 mt-3">Humidity:</h6>
-                    </div>
-                  </div>
-                 </div>
-                 <div class="col mb-3">
-                  <div class="card border-0 bg-secondary text-white">
-                    <div class="card-body p-3 text-white">
-                       <h5 class="card-title fw-semibold">(Date)</h5>
-                       <h6 class="card-text my-3 mt-3">Temperature:</h6>
-                       <h6 class="card-text my-3 mt-3">Wind:</h6>
-                       <h6 class="card-text my-3 mt-3">Humidity:</h6>
-                    </div>
-                  </div>
-                 </div>
-                 <div class="col mb-3">
-                  <div class="card border-0 bg-secondary text-white">
-                    <div class="card-body p-3 text-white">
-                       <h5 class="card-title fw-semibold">(Date)</h5>
-                       <h6 class="card-text my-3 mt-3">Temperature:</h6>
-                       <h6 class="card-text my-3 mt-3">Wind:</h6>
-                       <h6 class="card-text my-3 mt-3">Humidity:</h6>
-                    </div>
-                  </div>
-                 </div>
-                 <div class="col mb-3">
-                  <div class="card border-0 bg-secondary text-white">
-                    <div class="card-body p-3 text-white">
-                       <h5 class="card-title fw-semibold">(Date)</h5>
-                       <h6 class="card-text my-3 mt-3">Temperature:</h6>
-                       <h6 class="card-text my-3 mt-3">Wind:</h6>
-                       <h6 class="card-text my-3 mt-3">Humidity:</h6>
-                    </div>
-                  </div>
-                 </div>
               </div>
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
