--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"></link>
-    <title>Weather app</title>
+    <title>Weather App</title>
 </head>
 <body class="body">
-    <header class="bg-primary text-center py-3">
-        <h1 class="fw-bold h3 text-light my-1">Weather Dashboard</h1>
-    </header>
-    <div class="container-fluid my-5 weather-data">
-        <div class="row">
-            <div class="col-xxl-3 col-md-4 px-lg-4">
-                <h4 class="fw-bold">Enter a City Name</h4>
-                <input type="text" id="city-input" class="py-2 form-control" placeholder="E.g. Sarajevo">
-                <button class="btn btn-primary w-100 my-2 p-2" onclick="getCoordinates()" type="submit">Search</button>
+  <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="card " style="width:30rem; height:auto">
+      <div class="card-body search-card">
+        <h4 class="fw-bold">Enter a City Name</h4>
+                <input type="text" id="city-input" class="py-2 form-control" placeholder="E.g. Sarajevo,New York, ..." style="height: 55px; font-size: larger;">
+                <button class="search btn fw-semibold btn-primary w-100 my-2 p-2" style="font-size: larger;" onclick="startApp()">Search</button>
                 <div class="container-fluid ">
                     <div class="row">
                       <div class="col-5 px-0">
                         <hr>
                       </div>
                       <div class="col-2 px-1 text-center">
-                        <p class="text-center my-0 text-secondary-emphasis">or</p>
+                        <p class="text-center my-0 text-secondary-emphasis" style="font-size: larger;">or</p>
                       </div>
                       <div class="col-5 px-0">
                         <hr>
                       </div>
                     </div>
                 </div>
-                <button class="btn btn-secondary w-100 my-2 p-2" onclick="getUserLocation()">Use Current Location</button>
-            </div>
-            <div class="col-xxl-9 col-md-8 mt-md-1 mt-4 pe-lg-4">
-              <div class="current-weather bg-primary text-white py-2 px-4 rounded-3"> 
-                  <h3 class="fw-bold current-city">Now</h3>
-                  <h5 class="font-s" >Temperature: <p id="current-temp"></p></h5>
-                  <h5 id="current-wind">Wind:</h5>
-              </div>
-              <h4 class="fw-bold my-4">5-Day Forecast</h4>
-              <div class="weather-forecast row row-cols-sm-2 row-cols-lg-4 row-cols-xl-5 justify-content-between">
-              </div>
-            </div>
-        </div>
+            <button class="fw-semibold btn btn-secondary w-100 my-2 p-2"style="font-size: larger; " onclick="getUserLocation()">Use Current Location</button>
+      </div>
     </div>
-    <script src="app.js"></script>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
